--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <svg class="brand-mark" viewBox="0 0 64 64" aria-hidden="true">
       <path d="M6 46 L18 18 L46 18 L58 46 L49 46 L43 33 L21 33 L15 46 Z" />
     </svg>
-    <span>Vitesse<span class="accent">.</span></span>
+    <span>Luxury Motors<span class="accent">.</span></span>
   </a>
   <nav class="main-nav">
     <a href="index.html">Início</a>
@@ -45,7 +45,7 @@
 
 <footer class="site-footer">
   <div class="footer-inner">
-    <p>© 2025 Vitesse Luxury Motors — Feito com design minimalista.</p>
+    <p>© 2025 Vitesse Luxury Motors — Feito por Vitor S.</p>
     <nav class="footer-nav">
       <a href="index.html">Início</a>
       <a href="rent.html">Alugar</a>
